syntax = "proto3";

package blog;

// Main Blog Service with authentication and post operations
service BlogService {
    // Authentication methods
    rpc Register(RegisterRequest) returns (AuthResponse);
    rpc Login(LoginRequest) returns (AuthResponse);

    // Post CRUD operations
    rpc CreatePost(CreatePostRequest) returns (PostResponse);
    rpc GetPost(GetPostRequest) returns (PostResponse);
    rpc UpdatePost(UpdatePostRequest) returns (PostResponse);
    rpc DeletePost(DeletePostRequest) returns (DeleteResponse);
    rpc ListPosts(ListPostsRequest) returns (ListPostsResponse);
}

// ============ Authentication Messages ============

message RegisterRequest {
    string username = 1;
    string email = 2;
    string password = 3;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message AuthResponse {
    string token = 1;
    User user = 2;
}

message User {
    string id = 1;
    string username = 2;
    string email = 3;
    string created_at = 4;
}

// ============ Post Messages ============

message Post {
    string id = 1;
    string title = 2;
    string content = 3;
    string author_id = 4;
    string author_username = 5;
    string created_at = 6;
    string updated_at = 7;
}

message CreatePostRequest {
    string title = 1;
    string content = 2;
}

message GetPostRequest {
    string post_id = 1;
}

message UpdatePostRequest {
    string post_id = 1;
    string title = 2;
    string content = 3;
}

message DeletePostRequest {
    string post_id = 1;
}

message ListPostsRequest {
    int32 page = 1;
    int32 page_size = 2;
    optional string author_id = 3;
}

message PostResponse {
    Post post = 1;
}

message DeleteResponse {
    bool success = 1;
    string message = 2;
}

message ListPostsResponse {
    repeated Post posts = 1;
    int64 total_count = 2;
    int32 page = 3;
    int32 page_size = 4;
}
